addons/traefik/traefik-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: proxy
spec:
  selector:
    app.kubernetes.io/name: traefik
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 31443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ui
  namespace: proxy
spec:
  selector:
    app.kubernetes.io/name: traefik
  #type: NodePort
  ports:
    - name: admin
      protocol: TCP
      port: 8080
      targetPort: 8080
      #nodePort: 31880
