addons/traefik/traefik-ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: http
spec:
  rules:
    - host: "traefik.rpi.lan"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: traefik-ui
                port:
                  number: 8080
